tests/compile_fail/debug/unknown_attribute.stderr
error: expected one of: string literal, `rename_all`, `bounds`, `bound`, `where`
 --> tests/compile_fail/debug/unknown_attribute.rs:2:9
  |
2 | #[debug(unknown = "unknown")]
  |         ^^^^^^^
